# computed-css-engine

./: .gitignore  BENCHMARK_RESULTS.md  BUILD.md  Cargo.toml  README.md  debug_a_color.py  debug_accuracy.py  debug_accuracy2.py  debug_accurate.py  debug_all_diffs.py  debug_div.py  debug_real_rust_empty.py  debug_selector.py  final_accuracy_test.py  pyproject.toml  test2.py  test_benchmark.py  test_download.py  test_verify.py
.claude/: settings.local.json
.github/workflows/: release.yml
src/: cascade.rs  computed.rs  css_parser_core.rs  html_parser.rs  js_executor.rs  lib.rs  pseudo.rs  scraper_adapter.rs  style_tree.rs
test_pages/: html5_test.html  inline_style_test.html  pytorch.html  w3c_wcag.html
