[package]
name = "css_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "css_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
html5ever = "0.26"
cssparser = "0.29"
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
phf = "0.11"
rquickjs = "0.4"
scraper = "0.20"
