[package]
name = "computed-css-engine"
version = "0.1.2"
edition = "2021"

[lib]
name = "computed_css_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
html5ever = "0.26"
cssparser = "0.29"
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
phf = "0.11"
scraper = "0.20"
ego-tree = "0.6"
once_cell = "1.19"
selectors = "0.36.1"
